src/objects/npe03__Recurring_Donation__c.object
<CustomObject>
    <description>Recurring Donations with no end date.</description>
    <fields>
        <fullName>CARE_Payment_Frequency__c</fullName>
        <label>CARE_Payment_Frequency</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Date__c</fullName>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>End of Membership</fullName>
                </value>
                <value>
                    <fullName>Too Expensive</fullName>
                </value>
                <value>
                    <fullName>Other Reason</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancelled_By__c</fullName>
        <label>Cancelled By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
     <fields>
        <fullName>Data_Source__c</fullName>
        <label>Data Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                    <default>true</default>
                    <label>Salesforce</label>
                </value>
                <value>
                    <fullName>CARE</fullName>
                </value>
                <value>
                    <fullName>Intrabiz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Direct_Debit_Key__c</fullName>
        <label>Direct_Debit_Key</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Contact_Key__c</fullName>
        <label>First Contact Key</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>First Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recurring Donations (First Contact)</relationshipLabel>
        <relationshipName>Recurring_Donations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Payment__c</fullName>
        <label>First Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Include__c</fullName>
        <label>Include</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Payment__c</fullName>
        <formula>IF(  NOT( ISNULL( Membership_Months_Left__c ) ) ,  ADDMONTHS(First_Payment__c,Membership_Months_Left__c),Today() )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MandateKey__c</fullName>
        <label>Mandate Key</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Membership_Auto_Number__c</fullName>
        <displayFormat>M-{0}</displayFormat>
        <label>Membership Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Membership_Months_Left__c</fullName>
        <formula>CASE( Text(Membership_type__c) , 
&quot;1 year standard - Individual&quot;, (ADDMONTHS( DATEVALUE(CreatedDate),12)- TODAY())/30.5,

&quot;1 year standard - Joint&quot;, (ADDMONTHS( DATEVALUE(CreatedDate),12)- TODAY())/30.5,

&quot;18 month - Individual&quot;, (ADDMONTHS( DATEVALUE(CreatedDate),18)- TODAY())/30.5,

&quot;18 month - Joint&quot;, (ADDMONTHS( DATEVALUE(CreatedDate),18)- TODAY())/30.5,

&quot;4 year - Individual&quot;, (ADDMONTHS( DATEVALUE(CreatedDate),48)- TODAY())/30.5,

&quot;4 year - joint&quot;, (ADDMONTHS( DATEVALUE(CreatedDate),48)- TODAY())/30.5,

&quot;Life&quot;, (ADDMONTHS( DATEVALUE(CreatedDate),1188)- TODAY())/30.5,

&quot;Life Joint Membership&quot;, (ADDMONTHS( DATEVALUE(CreatedDate),1188)- TODAY())/30.5,

&quot;Reduced rate 1 year - Ind&quot;, (ADDMONTHS( DATEVALUE(CreatedDate),12)- TODAY())/30.5,

&quot;Reduced rate 1 year - Joint&quot; , (ADDMONTHS( DATEVALUE(CreatedDate),12)- TODAY())/30.5,

&quot;Staff Membership - Individual&quot; , (ADDMONTHS( DATEVALUE(CreatedDate),1188)- TODAY())/30.5,

&quot;Staff Membership - Joint&quot; , (ADDMONTHS( DATEVALUE(CreatedDate),1188)- TODAY())/30.5,

&quot;Ten Year - Individual&quot; , (ADDMONTHS( DATEVALUE(CreatedDate),120)- TODAY())/30.5,

&quot;Ten Year - Joint&quot; , (ADDMONTHS( DATEVALUE(CreatedDate),120)- TODAY())/30.5,

&quot;1 year volunteer/practitioner - Ind&quot; , (ADDMONTHS( DATEVALUE(CreatedDate),12)- TODAY())/30.5,

&quot;1 year volunteer/practitioner - Jnt&quot; , (ADDMONTHS( DATEVALUE(CreatedDate),12)- TODAY())/30.5,

 0
 )</formula>
        <label>Membership Months Left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Membership_Number__c</fullName>
        <displayFormat>M-{0}</displayFormat>
        <label>Membership Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Membership_Status__c</fullName>
        <label>Membership Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Lapsed</fullName>
                </value>
                <value>
                    <fullName>Cancelling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Membership_type__c</fullName>
        <label>Membership type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 year standard - Individual</fullName>
                </value>
                <value>
                    <fullName>1 year standard - Joint</fullName>
                </value>
                <value>
                    <fullName>18 month - Individual</fullName>
                </value>
                <value>
                    <fullName>18 month - Joint</fullName>
                </value>
                <value>
                    <fullName>4 year - Individual</fullName>
                </value>
                <value>
                    <fullName>4 year - Joint</fullName>
                </value>
                <value>
                    <fullName>Life</fullName>
                </value>
                <value>
                    <fullName>Life Joint Membership</fullName>
                </value>
                <value>
                    <fullName>Reduced rate 1 year - Ind</fullName>
                </value>
                <value>
                    <fullName>Reduced rate 1 year - Joint</fullName>
                </value>
                <value>
                    <fullName>Staff Membership - Individual</fullName>
                </value>
                <value>
                    <fullName>Staff Membership - Joint</fullName>
                </value>
                <value>
                    <fullName>Ten Year - Individual</fullName>
                </value>
                <value>
                    <fullName>Ten Year - Joint</fullName>
                </value>
                <value>
                    <fullName>1 year volunteer/practitioner - Ind</fullName>
                </value>
                <value>
                    <fullName>1 year volunteer/practitioner - Jnt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>My_Membership_Check__c</fullName>
        <formula>if(((npe03__Contact__c = $User.ContactId)||(First_Contact__c = $User.ContactId)),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Membership Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Payment__c</fullName>
         <formula>CASE(text( npsp4hub__Payment_Method__c ), 
&apos;Direct Debit&apos;,   DATE(YEAR(TODAY()),MONTH(TODAY())+1,3),
&apos;Credit/Debit Card&apos;,   null, 
&apos;CreditCard&apos;, null,null)</formula>
        <label>Next Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Post</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <isActive>false</isActive>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Reacquire</fullName>
                    <isActive>false</isActive>
                    <label>Reacquire</label>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                    <isActive>false</isActive>
                    <label>Renewal</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_profile_Key__c</fullName>
        <label>Payment profile Key</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recurring_Donations_Key__c</fullName>
        <label>Recurring Donations Key</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Second_Contact_Key__c</fullName>
        <label>Second Contact Key</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Second_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Second Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recurring Donations (Second Contact)</relationshipLabel>
        <relationshipName>Recurring_Donations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npe03__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npe03__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N80000002bOmREAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npe03__Date_Established__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date Established</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe03__Donor_Name__c</fullName>
        <formula>if(
  LEN(npe03__Contact__c)&gt;0,
  npe03__Contact__r.FirstName  &amp; &quot; &quot; &amp; npe03__Contact__r.LastName,
   npe03__Organization__r.Name
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Donor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe03__Installment_Amount__c</fullName>
        <formula>IF( 

OR(
(text(npe03__Schedule_Type__c)=$Label.npe03__RecurringDonationMultiplyValue), 
(text(npe03__Open_Ended_Status__c)=$Label.npe03__RecurringDonationOpenStatus)
) 
, npe03__Amount__c , IF(npe03__Installments__c&gt;0,npe03__Amount__c / npe03__Installments__c,0)




)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npe03__Installment_Period__c</fullName>
        <description>How often you’ll receive the donations. NOTE: Changing the installment period for an existing Fixed-Length Recurring Donation may result in the loss and re-creation of open opportunities. Any data associated with those opportunities may be lost.</description>
        <inlineHelpText>Sets the installment period for your recurring donations.  WARNING: Changing the Installment Period for an existing open-ended Recurring Donation can cause open Opportunities to be deleted and recreated. Any associated data may not be retained.</inlineHelpText>
        <label>Installment Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>1st and 15th</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe03__Installments__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Number of installments (donations) you expect to receive. For Fixed-Length Recurring Donations only.</description>
        <inlineHelpText>Number of installments.  Only used with Non-Open Ended Recurring Donations.</inlineHelpText>
        <label>Installments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npe03__Last_Payment_Date__c</fullName>
        <description>Date of the last payment for this Recurring Donation</description>
        <inlineHelpText>Date of the last payment for this Recurring Donation</inlineHelpText>
        <label>Last Donation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe03__Next_Payment_Date__c</fullName>
        <description>Holds the date of the next recurring payment.  Manually editing this field will recalculate all future opportunity&apos;s close dates based on the scheduled defined.</description>
        <inlineHelpText>Holds the date of the next recurring payment.  Manually editing this field will recalculate all future opportunity&apos;s close dates based on the scheduled defined.</inlineHelpText>
        <label>Next Donation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe03__Open_Ended_Status__c</fullName>
        <label>Open Ended Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe03__Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>RecurringDonations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npe03__Paid_Amount__c</fullName>
        <description>Total Amount paid on this Recurring Donation</description>
        <inlineHelpText>Total Amount paid on this Recurring Donation</inlineHelpText>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npe03__Recurring_Donation_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Recurring_Donations_Pledges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npe03__Schedule_Type__c</fullName>
        <description>Tells Salesforce how to compute the amount for each child opportunity, based on what you&apos;ve entered in the Amount field. For Fixed-Length Recurring Donations only.</description>
        <inlineHelpText>Whether the Amount is used for each installment (Multiple By), or Amount is split between installments (Divide By).  Only used with Non-Open Ended Recurring Donations.</inlineHelpText>
        <label>Schedule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Multiply By</fullName>
                </value>
                <value>
                    <fullName>Divide By</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe03__Total_Paid_Installments__c</fullName>
        <description>Total number of installments paid on this Recurring Donation.</description>
        <inlineHelpText>Total number of installments paid on this open-ended recurring donation.</inlineHelpText>
        <label>Total Paid Installments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npe03__Total__c</fullName>
        <formula>IF(TEXT( npe03__Open_Ended_Status__c) =  $Label.npe03__RecurringDonationOpenStatus, 0,
CASE(
 npe03__Schedule_Type__c ,
&quot;Multiply By&quot;, npe03__Installments__c * npe03__Amount__c ,
&quot;Divide By&quot;,npe03__Amount__c
,0
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp4hub__Mandate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mandate</label>
        <referenceTo>cpm__Mandate__c</referenceTo>
        <relationshipLabel>Recurring Donations</relationshipLabel>
        <relationshipName>Recurring_Donations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp4hub__Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct Debit</fullName>
                </value>
                <value>
                    <fullName>GiftAid</fullName>
                </value>
                <value>
                    <fullName>CreditCard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp4hub__Payment_Processor__c</fullName>
        <label>Payment Processor</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>npsp4hub__Payment_Method__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>PaymentHub-BACS</fullName>
                </value>
                <value>
                    <fullName>PaymentHub-GiftAid</fullName>
                </value>
                <value>
                    <fullName>PaymentHub-Stripe</fullName>
                </value>
                <value>
                    <fullName>PaymentHub-WorldPay</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp4hub__Payment_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Profile</label>
        <referenceTo>cpm__Payment_Profile__c</referenceTo>
        <relationshipLabel>Recurring Donations</relationshipLabel>
        <relationshipName>Recurring_Donations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp4hub__Target__c</fullName>
        <label>Target</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>npsp4hub__Payment_Processor__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>NCT Course Fee Collections - S18</fullName>
                </value>
                <value>
                    <fullName>NCT Membership Collections - S18</fullName>
                </value>
                <value>
                    <fullName>BACS Standard 18</fullName>
                </value>
                <value>
                    <fullName>HMRC</fullName>
                </value>
                <value>
                    <fullName>NCT Training Fee Collections - S18</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Always_Use_Last_Day_Of_Month__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, all future monthly or quarterly donation installments will be set to the last day of the month, regardless of the actual date in the &quot;Next Donation Date&quot; field. This is ignored when the installment period is not set to Monthly or Quarterly.</inlineHelpText>
        <label>Always use last day of month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Day_of_Month__c</fullName>
        <inlineHelpText>Sets future monthly, custom monthly, or quarterly donation installments to the selected day of the month, regardless of Next Donation Date. NOTE: If the Always use last day of month checkbox is selected, it supersedes the Day of Month value.</inlineHelpText>
        <label>Day of Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Recurring Donations</label>
    <listViews>
        <fullName>All_Recurring_Donations</fullName>
        <columns>NAME</columns>
        <columns>npe03__Contact__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>npe03__Installments__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>npsp4hub__Payment_Method__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Recurring Donations</label>
        <sharedTo>
            <group>Capacity_PSA_group</group>
            <group>Enquiry_PSA_group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Membership</fullName>
        <columns>Membership_type__c</columns>
        <columns>npsp4hub__Payment_Method__c</columns>
        <columns>Cancellation_Reason__c</columns>
        <columns>Membership_Status__c</columns>
        <columns>npe03__Date_Established__c</columns>
        <columns>npe03__Installments__c</columns>
        <columns>npe03__Installment_Period__c</columns>
        <columns>npe03__Total_Paid_Installments__c</columns>
        <columns>npe03__Installment_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Membership_Check__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Membership</label>
    </listViews>
    <listViews>
        <fullName>Upcoming_Donations</fullName>
        <columns>NAME</columns>
        <columns>npe03__Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>npe03__Next_Payment_Date__c</columns>
        <columns>npe03__Amount__c</columns>
        <columns>Membership_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>npe03__Next_Payment_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>11/1/2018</value>
        </filters>
        <label>Upcoming Donations from Nov</label>
        <sharedTo>
            <group>Capacity_PSA_group</group>
            <group>Enquiry_PSA_group</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Recurring Donation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recurring Donations</pluralLabel>
    <recordTypes>
        <fullName>Membership</fullName>
        <active>true</active>
        <label>Membership</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cancellation_reason_should_be_mandatory</fullName>
        <active>true</active>
        <description>Cancellation reason should be mandatory when the Membership Status updated to Cancelled or Cancelling</description>
        <errorConditionFormula>OR(
ISPICKVAL(Membership_Status__c, &apos;Cancelled&apos;),
ISPICKVAL(Membership_Status__c, &apos;Cancelling&apos;)
)
 &amp;&amp; 
OR(
ISBLANK(TEXT(Cancellation_Reason__c))
)</errorConditionFormula>
        <errorDisplayField>Cancellation_Reason__c</errorDisplayField>
        <errorMessage>You must select Cancellation reason</errorMessage>
    </validationRules>
</CustomObject>